samples/_failures_safe/1761346341_f3e370_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c2440342.c: In function ‘main’:
./samples/SAFE/__tmp_c2440342.c:165:9: error: expected declaration or statement at end of input
  165 |         input[len-1] = '\0';
      |         ^~~~~
./samples/SAFE/__tmp_c2440342.c:165:9: error: expected declaration or statement at end of input
